# dune-PFASST

./: .gitignore  CMakeLists.txt  README.md  config.h.cmake  dune-PFASST.pc.in  dune.module  dune.opts
src/examples/: CMakeLists.txt  CMakeLists.txt~  FE_sweeper_impl.hpp  pamg.cpp  parallel_solver.cpp
src/examples/2dfischer/: CMakeLists.txt
src/examples/DG_fischer/: FE_sweeper.hpp  dune_includes  spectral_transfer_impl.hpp
src/examples/FE_CGNewton/: CMakeLists.txt  FE_mlsdcFP.cpp  FE_sweeper.hpp  FE_sweeper_impl.hpp  fe_manager.hpp
src/examples/FE_Newton/: CMakeLists.txt  FE_mlsdcFP.cpp  FE_sdcFP.cpp  FE_sweeper.hpp  FE_sweeper_impl.hpp  FE_sweeper_impl.hpp~  fe_manager.hpp  fe_manager_hi.hpp  parallelCG.cpp  spectral_transfer_impl.hpp
src/examples/FE_Newton_linear/: CMakeLists.txt  FE_pfasstFP.cpp  FE_sdcFP.cpp  FE_sweeper.hpp  FE_sweeper_impl.hpp  sp.hpp
src/examples/FE_flame_propagation/: CMakeLists.txt  FE_mlsdcFP.cpp  FE_sdcFP.cpp  FE_sweeper.hpp  FE_sweeper_impl.hpp  assemble.hpp  dune_includes  fe_manager_fp.hpp
src/examples/FE_flame_propagation_Newton/: CMakeLists.txt  FE_sdcFP.cpp~  FE_sweeper.hpp  FE_sweeper_impl.hpp  assemble.hpp
src/examples/FE_gf/: CMakeLists.txt  CMakeLists.txt~  FE_sdcFP.cpp  FE_sweeper.hpp  FE_sweeper_impl.hpp  assemble.hpp
src/examples/FE_gray_scott/: CMakeLists.txt  FE_mlsdcGS.cpp  FE_mlsdcGS10.cpp~  FE_pfasstGS.cpp  FE_pfasstGS10.cpp~  FE_sdcGS.cpp  FE_sweeper.hpp  FE_sweeper.hpp~  FE_sweeper_impl.hpp  FE_sweeper_impl.hpp~  dune_includes~  dune_vec_multi.hpp  dune_vec_multi_impl.hpp
src/examples/FE_heat/: CMakeLists.txt  FE_mlsdc.cpp  FE_pfasst.cpp  FE_sdc.cpp  FE_sdc.cpp~  FE_sweeper.hpp  FE_sweeper_impl.hpp  assemble.hpp  dune_includes  fe_manager.hpp  spectral_transfer_impl.hpp
src/examples/FE_hi_heat/: CMakeLists.txt  FE_mlsdc.cpp  FE_mlsdc.cpp~  FE_pfasst.cpp  FE_sdc.cpp  FE_sweeper.hpp  FE_sweeper_impl.hpp  dune_includes  fe_manager_hi.hpp  spectral_transfer_impl.hpp  vgl_pfasst
src/examples/FE_vgl/: CMakeLists.txt  FE_mlsdcFP.cpp  FE_pfasstFP.cpp  FE_sdcFP.cpp  FE_sweeper.hpp  FE_sweeper.hpp.backup  FE_sweeper_impl.hpp  fe_manager.hpp
src/examples/FE_vgl2/: CMakeLists.txt  FE_mlsdcFP.cpp  FE_sweeper_impl.hpp  dune_includes
src/examples/Fischer_IMEX/: CMakeLists.txt  FE_mlsdcFP.cpp  FE_sweeper.hpp  FE_sweeper_impl.hpp  spectral_transfer.hpp
src/examples/Newton/: CMakeLists.txt  FE_mlsdcFP.cpp  FE_pfasstFP.cpp  FE_sdcFP.cpp  FE_sweeper.hpp  FE_sweeper_impl.hpp  fischer_sweeper.hpp  parallelCG.cpp  spectral_transfer.hpp  spectral_transfer_impl.hpp
src/examples/Newton_PFASST/: FE_pfasstFP.cpp  FE_sdcFP.cpp  FE_sweeper.hpp  FE_sweeper_impl.hpp  dune_includes  spectral_transfer_impl.hpp
src/examples/advection_diffusion/: CMakeLists.txt  _vanilla_sdc.cpp  advection_diffusion_sweeper.hpp  advection_diffusion_sweeper.hpp.backup  serial_mlsdc.cpp  serial_mlsdc.cpp.backup  vanilla_sdc.cpp  vanilla_sdc.cpp.backup
src/examples/fertige_kopieFE_flame_propagation/: FE_mlsdcFP.cpp  FE_sdcFP.cpp  FE_sweeper_impl.hpp  assemble.hpp
src/examples/fischer/: CMakeLists.txt  FE_mlsdcFP.cpp  FE_pfasstFP.cpp  FE_sdcFP.cpp  FE_sweeper.hpp  FE_sweeper_impl.hpp  fischer_sweeper.hpp  spectral_transfer_impl.hpp
src/examples/fischer_equation/: CMakeLists.txt  diff
src/examples/flame_propagation/: CMakeLists.txt  CMakeLists.txt~  FE_mlsdcFP.cpp  FE_mlsdcFP.cpp~  FE_sdcFP.cpp  FE_sdcFP.cpp.backup  FE_sweeper.hpp  FE_sweeper_impl.hpp  assemble.hpp  assemble_old.hpp
src/examples/gray_scott/: CMakeLists.txt  CMakeLists.txt~  FE_mlsdcGS10.cpp  FE_pfasstGS.cpp  FE_pfasstGS10.cpp  FE_sdcGS10.cpp  FE_sdcGS10.cpp~  FE_sweeper.hpp  FE_sweeper_impl.hpp  assemble.hpp  dune_includes  dune_vec_multi.hpp  dune_vec_multi_impl.hpp  periodic_assemble.hpp
src/examples/heat/: CMakeLists.txt  FE_mlsdc.cpp  FE_pfasst.cpp  FE_sdc.cpp  FE_sweeper.hpp  FE_sweeper_impl.hpp  advection_diffusion_sweeper.hpp  dune_includes  nonlinearpoissonfem.hh  sp_ohneFE.hpp  (+2 more)
(+483 files in other folders)
