#add_subdirectory(FE_heat)
#add_subdirectory(fertige_kopieFE_flame_propagation)
#add_subdirectory(FE_flame_propagation_Newton)
add_subdirectory(FE_hi_heat)
#add_subdirectory(hi_heat)
#add_subdirectory(Newton_PFASST)
#add_subdirectory(FE_Newton)
#add_subdirectory(heat)
#add_subdirectory(impl_FE_gray_scott)
add_subdirectory(FE_gray_scott)
